--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,38 @@
-# Compiled class file
-*.class
+# Ignore help documentation
+HELP.md
 
-# Log file
-*.log
+# Ignore compiled output directories
+out/
+**/out/
 
-# BlueJ files
-*.ctxt
+# Ignore IDE and editor-specific files
+.idea/
+*.iml
+*.iws
+.classpath
+.factorypath
+.project
+.settings/
+.springBeans
+.sts4-cache
+bin/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Ignore Maven and Gradle build directories
+target/
+.mvn/wrapper/maven-wrapper.jar
+**/target/
+build/
+**/build/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Ignore Visual Studio Code settings
+.vscode/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Ignore macOS system files
+.DS_Store
+
+# Ignore NetBeans specific files
+**/nbproject/private/
+**/nbbuild/
+**/dist/
+**/nbdist/
+**/.nb-gradle/
