feat: connection of keyclock and created services

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+
   datasource:
     driverClassName: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/KnitWit
@@ -13,7 +14,26 @@ spring:
     password: postgres
     validationQuery: SELECT 1
     testOnBorrow: true
+
   flyway:
     enabled: true
     baselineOnMigrate: true
     locations: classpath:db/migration
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/KnitWit-realm
+      client:
+        provider:
+          keycloack:
+            issuer-uri: http://localhost:8080/realms/KnitWit-realm
+            user-name-attribute: preferred_username
+        registration:
+          keycloack:
+            client-id: KnitWit-client
+            client-secret: 49mt5UMHbYdkqTDDnhOaC87xpllp6Jfh
+            scope: openid
+server:
+  port: 8081
