feat(knitwit-104): add user avatars and course avatars

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,6 +20,14 @@ spring:
     baselineOnMigrate: true
     locations: classpath:db/migration
 
+minio:
+  url: " http://localhost:9000"
+  username: knitwitadmin
+  password: knitwitadmin
+  bucketName: knitwit
+
+
+
 #  security:
 #    oauth2:
 #      resourceserver:
