--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:13
+    image: postgres:latest
     container_name: postgres
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_DB: KnitWit
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+      - postgres-data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
@@ -25,35 +25,30 @@ services:
       - postgres
 
   minio:
-    image: minio/minio
+    image: quay.io/minio/minio
     container_name: minio
     environment:
-      MINIO_ACCESS_KEY: knitwitadmin
-      MINIO_SECRET_KEY: knitwitadmin
-    command: server /data
+      MINIO_ROOT_USER: knitwitadmin
+      MINIO_ROOT_PASSWORD: knitwitadmin
     ports:
       - "9000:9000"
+      - "9001:9001"
     volumes:
-      - minio_data:/data
+      - minio-data:/data
+    command: server /data --console-address ":9001"
 
   app:
-    image: knitwit
-    container_name: app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: knitwit_app
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/KnitWit
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-      SPRING_JPA_SHOW_SQL: true
-      SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: true
-      SPRING_FLYWAY_ENABLED: true
-      SPRING_FLYWAY_BASELINE_ON_MIGRATE: true
-      SPRING_FLYWAY_LOCATIONS: classpath:db/migration
-      MINIO_URL: http://minio:9000
-      MINIO_USERNAME: knitwitadmin
-      MINIO_PASSWORD: knitwitadmin
-      MINIO_BUCKETNAME: knitwit
-      SERVER_PORT: 8081
+      SPRING_MINIO_URL: http://minio:9000
+      SPRING_MINIO_USERNAME: knitwitadmin
+      SPRING_MINIO_PASSWORD: knitwitadmin
     ports:
       - "8081:8081"
     depends_on:
@@ -61,5 +56,5 @@ services:
       - minio
 
 volumes:
-  postgres_data:
-  minio_data:
+  postgres-data:
+  minio-data:
