--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
 
   datasource:
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/KnitWit
+    url: jdbc:postgresql://postgres:5432/KnitWit
     username: postgres
     password: postgres
     validationQuery: SELECT 1
@@ -21,27 +21,10 @@ spring:
     locations: classpath:db/migration
 
 minio:
-  url: " http://localhost:9000"
+  url: http://minio:9000
   username: knitwitadmin
   password: knitwitadmin
   bucketName: knitwit
 
-
-
-#  security:
-#    oauth2:
-#      resourceserver:
-#        jwt:
-#          issuer-uri: http://localhost:8080/realms/KnitWit-realm
-#      client:
-#        provider:
-#          keycloack:
-#            issuer-uri: http://localhost:8080/realms/KnitWit-realm
-#            user-name-attribute: preferred_username
-#        registration:
-#          keycloack:
-#            client-id: KnitWit-client
-#            client-secret: 49mt5UMHbYdkqTDDnhOaC87xpllp6Jfh
-#            scope: openid
 server:
   port: 8081
