--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,9 +7,24 @@ spring:
         show_sql: true
         format_sql: true
 
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/KnitWit-Realm
+
+#  security:
+#    oauth2:
+#      resourceserver:
+#        opaquetoken:
+#          client-id: KnitWit-Client
+#          client-secret: RQ5BuLszpp11CPUA3jJ1bTE2sTswIllB
+#          introspection-uri: http://localhost:8080/realms/KnitWit-Realm/protocol/openid-connect/token/introspect
+
   datasource:
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://postgres:5432/KnitWit
+    url: jdbc:postgresql://localhost:5432/KnitWit
     username: postgres
     password: postgres
     validationQuery: SELECT 1
@@ -21,10 +36,23 @@ spring:
     locations: classpath:db/migration
 
 minio:
-  url: http://minio:9000
+  url: http://localhost:9000
   username: knitwitadmin
   password: knitwitadmin
   bucketName: knitwit
+
+realm: KnitWit-Realm
+server-url: http://localhost:8080
+client-id: admin-cli
+grant-type: password
+name: admin
+password: admin
+
+springdoc:
+  swagger-ui:
+    oauth:
+      client-id: KnitWit-Client
+      client-secret: RQ5BuLszpp11CPUA3jJ1bTE2sTswIllB
 
 server:
   port: 8081
