--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       POSTGRES_PASSWORD: postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - knitwit-network
 
   pgadmin:
     image: dpage/pgadmin4
@@ -25,6 +27,8 @@ services:
       - postgres
     volumes:
       - pgadmin-data:/var/lib/pgadmin
+    networks:
+      - knitwit-network
 
   minio:
     image: quay.io/minio/minio
@@ -38,6 +42,8 @@ services:
     volumes:
       - minio-data:/data
     command: server /data --console-address ":9001"
+    networks:
+      - knitwit-network
 
   keycloak:
     image: quay.io/keycloak/keycloak:latest
@@ -53,6 +59,8 @@ services:
       - keycloak-data:/opt/jboss/keycloak/standalone/data
     command:
       - start-dev
+    networks:
+      - knitwit-network
 
   app:
     build:
@@ -69,16 +77,21 @@ services:
       KEYCLOAK_URL: http://keycloak:8080
       KEYCLOAK_REALM: KnitWit-Realm
       KEYCLOAK_CLIENT_ID: KnitWit-Client
-      KEYCLOAK_CLIENT_SECRET: NNgdRoaGWsQqRx3BIHFokLCayKg76i8e
+      KEYCLOAK_CLIENT_SECRET: 79yYs4qzQcrj7XhmOK9g9HabkIlpyYWp
     ports:
       - "8081:8081"
     depends_on:
       - postgres
       - minio
       - keycloak
+    networks:
+      - knitwit-network
 
 volumes:
   postgres-data:
   minio-data:
   pgadmin-data:
   keycloak-data:
+
+networks:
+  knitwit-network:
