--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>3.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
 
         <dependency>
