--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
       SPRING_MINIO_URL: http://minio:9000
       SPRING_MINIO_USERNAME: knitwitadmin
       SPRING_MINIO_PASSWORD: knitwitadmin
-      KEYCLOAK_URL: http://keycloak:8080
+      KEYCLOAK_URL: http://keycloak:8080/auth
       KEYCLOAK_REALM: KnitWit-Realm
       KEYCLOAK_CLIENT_ID: KnitWit-Client
       KEYCLOAK_CLIENT_SECRET: drZaprYRwKYR0SlgJENVUsjiPGpmsY2k
